<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="414dp"
        android:layout_height="433dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="213dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="163dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/text_button"
                    android:layout_width="match_parent"
                    android:layout_height="134dp"
                    android:paddingLeft="25dp"
                    android:paddingTop="50dp"
                    android:paddingRight="25dp"
                    app:srcCompat="@drawable/tex1"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:text="@string/text"
                    android:textSize="30sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/video_button"
                    android:layout_width="match_parent"
                    android:layout_height="134dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="40dp"
                    android:paddingRight="20dp"
                    app:srcCompat="@drawable/vid1"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:gravity="center"
                    android:text="@string/video"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="164dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_button"
                    android:layout_width="match_parent"
                    android:layout_height="142dp"
                    android:paddingLeft="25dp"
                    android:paddingTop="50dp"
                    android:paddingRight="25dp"
                    app:srcCompat="@drawable/img1"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/image"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/audio_button"
                    android:layout_width="match_parent"
                    android:layout_height="141dp"
                    android:paddingLeft="31dp"
                    android:paddingTop="57dp"
                    android:paddingRight="31dp"
                    android:paddingBottom="5dp"
                    app:srcCompat="@drawable/aud1"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:gravity="center"
                    android:text="@string/audio"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/menu_back"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:alpha="0.0"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_menu_back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="109dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/custom_button"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/received"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_button"
        android:text="Received"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="TextView"
        android:textSize="22sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <!--    <LinearLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginEnd="8dp"-->
    <!--        android:layout_marginRight="8dp"-->
    <!--        android:elevation="60dp"-->
    <!--        android:orientation="vertical"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:ignore="MissingConstraints">-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginBottom="50dp"-->
    <!--            android:orientation="horizontal">-->

    <!--            <LinearLayout-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginRight="50dp"-->
    <!--                android:gravity="center"-->
    <!--                android:orientation="vertical">-->

    <!--                <ImageView-->
    <!--                    android:layout_width="84dp"-->
    <!--                    android:layout_height="64dp"-->
    <!--                    android:src="@drawable/tex1"></ImageView>-->

    <!--                <TextView-->
    <!--                    android:id="@+id/textView123"-->
    <!--                    android:layout_width="109dp"-->
    <!--                    android:layout_height="49dp"-->
    <!--                    android:layout_marginStart="24dp"-->
    <!--                    android:layout_marginLeft="24dp"-->
    <!--                    android:layout_marginEnd="300dp"-->
    <!--                    android:layout_marginRight="300dp"-->
    <!--                    android:layout_marginBottom="510dp"-->
    <!--                    android:gravity="center"-->
    <!--                    android:text="Text"-->
    <!--                    android:textColor="#000000"-->
    <!--                    android:textSize="30sp"-->
    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent" />-->

    <!--            </LinearLayout>-->

    <!--            <LinearLayout-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginRight="50dp"-->
    <!--                android:gravity="center"-->
    <!--                android:orientation="vertical">-->

    <!--                <ImageView-->
    <!--                    android:layout_width="150dp"-->
    <!--                    android:layout_height="150dp"-->
    <!--                    android:src="@drawable/tex1"></ImageView>-->

    <!--                <TextView-->
    <!--                    android:id="@+id/textView1234"-->
    <!--                    android:layout_width="109dp"-->
    <!--                    android:layout_height="49dp"-->
    <!--                    android:layout_marginStart="24dp"-->
    <!--                    android:layout_marginLeft="24dp"-->
    <!--                    android:layout_marginEnd="300dp"-->
    <!--                    android:layout_marginRight="300dp"-->
    <!--                    android:layout_marginBottom="510dp"-->
    <!--                    android:gravity="center"-->
    <!--                    android:text="Text"-->
    <!--                    android:textColor="#000000"-->
    <!--                    android:textSize="30sp"-->
    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent" />-->

    <!--            </LinearLayout>-->
    <!--        </LinearLayout>-->

    <!--        <LinearLayout-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginBottom="50dp"-->
    <!--            android:orientation="horizontal">-->

    <!--            <LinearLayout-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginRight="50dp"-->
    <!--                android:gravity="center"-->
    <!--                android:orientation="vertical">-->

    <!--                <ImageView-->
    <!--                    android:layout_width="150dp"-->
    <!--                    android:layout_height="150dp"-->
    <!--                    android:src="@drawable/tex1"></ImageView>-->

    <!--                <TextView-->
    <!--                    android:id="@+id/textView1236"-->
    <!--                    android:layout_width="109dp"-->
    <!--                    android:layout_height="49dp"-->
    <!--                    android:layout_marginStart="24dp"-->
    <!--                    android:layout_marginLeft="24dp"-->
    <!--                    android:layout_marginEnd="300dp"-->
    <!--                    android:layout_marginRight="300dp"-->
    <!--                    android:layout_marginBottom="510dp"-->
    <!--                    android:gravity="center"-->
    <!--                    android:text="Text"-->
    <!--                    android:textColor="#000000"-->
    <!--                    android:textSize="30sp"-->
    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent" />-->

    <!--            </LinearLayout>-->

    <!--            <LinearLayout-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginRight="50dp"-->
    <!--                android:gravity="center"-->
    <!--                android:orientation="vertical">-->

    <!--                <ImageView-->
    <!--                    android:layout_width="150dp"-->
    <!--                    android:layout_height="150dp"-->
    <!--                    android:src="@drawable/tex1"></ImageView>-->

    <!--                <TextView-->
    <!--                    android:id="@+id/textView12345"-->
    <!--                    android:layout_width="109dp"-->
    <!--                    android:layout_height="49dp"-->
    <!--                    android:layout_marginStart="24dp"-->
    <!--                    android:layout_marginLeft="24dp"-->
    <!--                    android:layout_marginEnd="300dp"-->
    <!--                    android:layout_marginRight="300dp"-->
    <!--                    android:layout_marginBottom="510dp"-->
    <!--                    android:gravity="center"-->
    <!--                    android:text="Text"-->
    <!--                    android:textColor="#000000"-->
    <!--                    android:textSize="30sp"-->
    <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--                    app:layout_constraintEnd_toEndOf="parent"-->
    <!--                    app:layout_constraintStart_toStartOf="parent" />-->

    <!--            </LinearLayout>-->
    <!--        </LinearLayout>-->
    <!--    </LinearLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>